# Family-Budget-Tool

./: .eslintrc.json  package-lock.json  package.json  structure.txt
app/: globals.css  page.tsx
app/api/accounts/: route.ts
app/api/accounts/[id]/: route.ts
app/api/investments/: route.ts
app/api/investments/[id]/: route.ts
app/api/project-contributions/: route.ts
app/api/project-contributions/[id]/: route.ts
app/api/projects/: route.ts
app/api/projects/[id]/: route.ts
app/api/snapshot/: route.ts
app/api/transactions/: route.ts
app/api/transactions/[id]/: route.ts
app/api/transfers/: route.ts
app/api/transfers/[id]/: route.ts
budgeting-desktop/: package-lock.json  package.json
budgeting-desktop/src/: App.tsx
budgeting-desktop/src-tauri/: Cargo.toml  tauri.conf.json
budgeting-desktop/src-tauri/capabilities/: default.json  storage.json
budgeting-desktop/src-tauri/src/: main.rs
budgeting-desktop/src/lib/: db.ts  migrations.ts  store-sqlite.ts
data/: budget.db
lib/: db.ts  supa-helpers.ts
