[package]
name = "budgeting-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "budgeting_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = [] }

# (Optional) opener plugin v2 — keep only if you actually use it
tauri-plugin-opener = "2"

# SQL plugin v2 with SQLite backend enabled
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Serde (unchanged)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
